# finnect

./: .dockerignore  .env.example  .gitignore  Makefile  docker-compose-local.yml  manage.py  pyproject.toml
config/: settings.py
docker/dev/: Dockerfile  nginx.conf  start.sh
docker/dev/scripts/: start.sh  start_celerybeat.sh  start_celeryworker.sh  start_flower.sh
finnect/: __init__.py  asgi.py  celery_app.py  interceptor.py  settings.py  urls.py  wsgi.py
finnect/apps/common/: admin.py  apps.py  cookies.py  models.py
finnect/apps/common/migrations/: 0001_initial.py
finnect/apps/userauth/: admin.py  apps.py  forms.py  managers.py  middlewares.py  models.py  serializers.py  urls.py  utils.py  views.py
finnect/apps/userauth/migrations/: 0001_initial.py
finnect/apps/userprofile/: admin.py  apps.py  models.py  signals.py
finnect/apps/userprofile/migrations/: 0001_initial.py  0002_alter_profile_identification_expiry_date_and_more.py  0003_alter_profile_phone_number.py  0004_alter_profile_date_of_birth.py
finnect/templates/emails/: account_blocked.html  account_locked.html  base.html  otp_email.html
