[tool.poetry]
name = "finnect"
version = "0.1.0"
description = ""
authors = ["Thalison Fernandes <thalissfernandes99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
django-countries = "^7.6.1"
django-phonenumber-field = "^8.0.0"
phonenumbers = "^8.13.53"
drf-spectacular = "^0.28.0"
pillow = "^11.1.0"
argon2-cffi = "^23.1.0"
djoser = "^2.3.1"
django-filter = "^24.3"
django-celery-email = "^3.0.0"
django-celery-beat = "^2.7.0"
cloudinary = "^1.42.1"
python-dateutil = "^2.9.0.post0"
psycopg2-binary = "^2.9.10"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
ruff = "^0.9.3"


[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
